--- a/ninja-food/src/style.css
+++ b/ninja-food/src/style.css
@@ -5,3 +5,15 @@
 @tailwind components;
 
 @tailwind utilities;
+
+/* @apply applies the tailwind styles to a given class */
+.card {
+  @apply bg-white rounded overflow-hidden shadow-md relative;
+}
+.badge {
+  @apply bg-secondary-100 text-secondary-200 text-sm rounded-full p-2 absolute top-0 ml-2 mt-2;
+}
+.btn {
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
+    /* tracking class increases a space between the letters */;
+}
